<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/FirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/input_1st"/>
    <EditText
        android:id="@+id/FirstNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems = "12"/>
    <TextView
        android:id="@+id/SecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/input_2nd"/>
    <EditText
        android:id="@+id/SecondNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems = "12"/>
    <TextView
        android:id="@+id/Operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/input_operation"/>
    <EditText
        android:id="@+id/OperationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems = "12"/>
    <Button
        android:id="@+id/CalculateButton"
        android:text="@string/Calculate"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ResultOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textSize="32dp" />
</LinearLayout>